<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_bg"
    tools:context=".Help">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="About Thrive"
            android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:padding="10dp"
            />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Goal"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            />

        <TextView
            android:background="@drawable/buttonrounded"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_goal"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:padding="15dp"
            />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Focus session"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            />

        <TextView
            android:background="@drawable/buttonrounded"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/focus_session"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:padding="15dp"
            />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Shop and avatars"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            />

        <TextView
            android:background="@drawable/buttonrounded"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:padding="15dp"
            />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stat"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            />

        <TextView
            android:background="@drawable/buttonrounded"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Stat"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:padding="15dp"
            />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Friends"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            />

        <TextView
            android:background="@drawable/buttonrounded"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:padding="15dp"
            />
    </LinearLayout>

</ScrollView>